client/styles/style.css
body {
  margin: 0;
  margin-top: 10px;
  font-family: arial, sans-serif;
  overflow: hidden;
}

a {
  color: #333;
  font-size: 14px;
  text-decoration: none;
}

h1 {
  font-style: italic;
  margin-bottom: 10px;
}

.shortlyForm {
  width: 500px;
  margin: auto;
  position: relative;
  margin-top: 200px; 
}

.shortlyInput {
  width: 360px;
  height: 31px;
  margin-bottom: 5px;
  border-radius: 5px;
  border: 1px solid lightgrey;
  margin: auto;
  padding: 0px 10px;
}

.shortlyInput:focus, .shortlyButton:focus {
  outline: none;
}

.shortlyButton:hover {
  background-color: rgb(105, 177, 187);
}

.shortlyButton {
  width: 131px;
  height: 34px;
  font-size: medium;
  font-family: sans-serif;
  background-color: rgb(59, 162, 176);
  color: white;
  border-radius: 5px;
  border: 1px solid rgb(59, 162, 176);
  letter-spacing: 1px;
  margin-top: 10px;
  left: 38%;
  position: absolute;
}

.link-header {
  position: relative;
  height:90px;
  top: 0;
  border-bottom: 1px solid lightgrey;
  margin: 0;
  padding: 0;
  box-shadow: 3px 2px 3px lightgrey;
}

.link-header .shortlyButton {
  left: 44%;
}

.linksContainer {
  width: 500px;
  margin: auto;
  margin-top: 10px;
  height: 700px;
  overflow-y: scroll;
  overflow-x: hidden;
}

.linkContainer {
  padding: 10px;
  border-bottom: 1px solid lightgrey;
}

.linkContainer p:first-child {
  float: right;
}

.linkContainer:hover, a:hover {
  background-color: #AAD3D8;
  color: white;
}

.navigation {
  width: 100%;
  height: 40px;
  background-color: #eee;
}

.navigation ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.navigation li {
  float: left;
}

.navigation li a {
  width: 100px;
  height: 20px;
  line-height: 20px;
  padding: 10px;
  display: block;
  text-align: center;
}

.navigation li a:hover {
  background-color: #ddd;
}

.navigation li a.selected {
  background-color: #ccc;
}

#container {
  clear: both;
  margin-top: 10px;
}

.link {
  clear: both;
  margin-bottom: 5px;
  padding: 5px;
  min-height: 50px;
}

.link:hover {
  background-color: #efe;
}

.link img {
  float: left;
  margin: 0 5px;
}

.link .visits {
  float: right;
  margin-right: 10px;
  margin-left: 20px;
}

.link .visits .count {
  font-size: 46px;
  font-weight: 600;
}

.link .title {
  font-weight: 600;
}

.link .original {
  color: #aaa;
  font-size: 12px;
}

.link .info {
  margin-left: 55px;
}

form {
  margin: 10px;
}

input {
  width: 360px;
  display: block;
  font-size: 13px;
  padding: 5px;
  margin-bottom: 5px;
}

input[type=url] {
  display: inline
}

input[type=url]:focus {
  outline: none;
}


.error {
  border: red solid 4px;
  padding: 10px;
  margin: 0 10px;
}

.clean {
  border: #efe solid 2px;
  padding: 10px;
  margin: 0 10px;
}

.creator {
  height: 50px;
}

.creator form {
  float: left;
  height: 80px;
}

.creator img.spinner {
  height: 46px;
  margin-bottom: 5px;
  padding: 10px;
  display: none;
}

.creator .message {
  clear: both;
}

